tree-sitter-gruel/grammar.js
    source_file: ($) => seq(repeat($._item)),

    // -------------------------------------------------------------- comments
    // The Gruel lexer treats `//`, `////`, and longer slash runs as plain
    // line comments and `///` (exactly three slashes) as a doc comment.
    // For acceptance-differential purposes we skip both forms uniformly,
    // but we expose them as separate tokens so editor queries can colour
    // them differently.
    line_comment: (_) => token(prec(1, seq('//', /[^\n]*/))),
    doc_comment: (_) => token(prec(2, seq('///', /[^\n]*/))),

    // -------------------------------------------------------------- literals
    integer_literal: (_) => /[0-9]+/,

    float_literal: (_) =>
      token(
        choice(
          /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,
          /[0-9]+[eE][+-]?[0-9]+/,
        ),
      ),

    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($._string_content, $.escape_sequence)),
        '"',
      ),

    _string_content: (_) => token.immediate(prec(1, /[^\\"\n]+/)),

    escape_sequence: (_) =>
      token.immediate(
        seq(
          '\\',
          choice(
            /[\\"nrt0]/,
            /u\{[0-9a-fA-F]{1,6}\}/,
          ),
        ),
      ),

    char_literal: (_) =>
      token(
        seq(
          "'",
          choice(
            /[^\\'\n\r]/,
            seq('\\', choice(/[\\'"nrt0]/, /u\{[0-9a-fA-F]{1,6}\}/)),
          ),
          "'",
        ),
      ),

    boolean_literal: (_) => choice('true', 'false'),

    unit_literal: (_) => prec(1, seq('(', ')')),

    self_literal: (_) => 'self',
    // `Self` appears in both type and value position. The value-form
    // shares its lexical content with the type-form `self_type`; we
    // distinguish them by giving `self_type_literal` lower precedence so
    // tree-sitter prefers `self_type` in type position.
    self_type_literal: (_) => prec(-1, 'Self'),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // -------------------------------------------------------------- items
    _item: ($) =>
      choice(
        $.function_definition,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.derive_declaration,
        $.const_declaration,
        $.link_extern_block,
      ),

    visibility: (_) => 'pub',

    directive: ($) =>
      seq(
        '@',
        field('name', $.identifier),
        optional(
          seq(
            '(',
            sepBy(',', $._directive_arg),
            ')',
          ),
        ),
      ),

    _directive_arg: ($) => choice($.identifier, $.string_literal),

    function_definition: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),

    parameter_list: ($) =>
      seq('(', sepBy(',', $.parameter), ')'),

    parameter: ($) =>
      seq(
        optional('comptime'),
        field('name', choice($.identifier, $.self_literal)),
        optional(seq(':', field('type', $._type))),
      ),

    struct_declaration: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'struct',
        field('name', $.identifier),
        field('body', $.struct_body),
      ),

    // Struct bodies are field declarations (comma-separated, with an
    // optional trailing comma) followed by zero or more methods. Methods
    // do not need commas between them — each ends with `}`. This matches
    // the chumsky parser's two-phase shape.
    struct_body: ($) =>
      seq(
        '{',
        optional(seq(
          $.field_declaration,
          repeat(seq(',', $.field_declaration)),
          optional(','),
        )),
        repeat($.method_definition),
        '}',
      ),

    field_declaration: ($) =>
      seq(
        optional($.visibility),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),

    method_definition: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),

    enum_declaration: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'enum',
        field('name', $.identifier),
        field('body', $.enum_body),
      ),

    // Enum bodies share the same two-phase shape as struct bodies:
    // variants (comma-separated) then methods (no commas).
    enum_body: ($) =>
      seq(
        '{',
        optional(seq(
          $.enum_variant,
          repeat(seq(',', $.enum_variant)),
          optional(','),
        )),
        repeat($.method_definition),
        '}',
      ),

    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(choice($.variant_tuple, $.variant_struct)),
      ),

    variant_tuple: ($) =>
      seq('(', sepByCommaWithTrailing($._type), ')'),

    variant_struct: ($) =>
      seq('{', sepByCommaWithTrailing($.field_declaration), '}'),

    interface_declaration: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'interface',
        field('name', $.identifier),
        field('body', $.interface_body),
      ),

    interface_body: ($) =>
      seq('{', repeat($.interface_method), '}'),

    interface_method: ($) =>
      seq(
        repeat($.directive),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        ';',
      ),

    const_declaration: ($) =>
      seq(
        repeat($.directive),
        optional($.visibility),
        'const',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expression),
        ';',
      ),

    link_extern_block: ($) =>
      seq(
        choice('link_extern', 'static_link_extern'),
        '(',
        field('library', $.string_literal),
        ')',
        '{',
        repeat($.extern_function_declaration),
        '}',
      ),

    extern_function_declaration: ($) =>
      seq(
        repeat($.directive),
        'fn',
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq('->', field('return_type', $._type))),
        ';',
      ),

    // -------------------------------------------------------------- types
    _type: ($) =>
      choice(
        $.unit_type,
        $.never_type,
        $.array_type,
        $.tuple_type,
        $.primitive_type,
        $.self_type,
        $.type_call,
        $.named_type,
        $.anonymous_struct_type,
      ),

    tuple_type: ($) =>
      seq(
        '(',
        $._type,
        ',',
        sepByCommaWithTrailing($._type),
        ')',
      ),

    primitive_type: (_) =>
      choice(
        'i8', 'i16', 'i32', 'i64', 'isize',
        'u8', 'u16', 'u32', 'u64', 'usize',
        'f16', 'f32', 'f64',
        'bool', 'char',
      ),

    self_type: (_) => 'Self',

    named_type: ($) => $.identifier,

    // Parameterized type call (ADR-0057): `Name(arg, ...)`.
    type_call: ($) =>
      prec(
        1,
        seq(
          field('callee', $.identifier),
          '(',
          sepByCommaWithTrailing1($._type),
          ')',
        ),
      ),

    block: ($) =>
      seq(
        '{',
        repeat($._block_statement),
        optional(field('final_expression', $._expression)),
        '}',
      ),

    _block_statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.expression_statement,
        $.control_flow_statement,
        $.empty_statement,
      ),

    empty_statement: (_) => ';',

    // The `mut` qualifier between `let` and the pattern is part of the
    // pattern (see `identifier_pattern: optional('mut') ident`), not the
    // statement: `let mut x = 1` is parsed as `let` + `mut x` pattern.
    let_statement: ($) =>
      seq(
        repeat($.directive),
        'let',
        field('pattern', $._pattern),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    // Assignment targets are syntactically a subset of expressions; the
    // compiler's sema layer does the actual "is this a place expression"
    // check (variable, field access, index). For acceptance-differential
    // purposes we parse the LHS as any expression.
    assignment_statement: ($) =>
      prec(
        2,
        seq(
          field('target', $._expression),
          '=',
          field('value', $._expression),
          ';',
        ),
      ),

    expression_statement: ($) =>
      seq(field('expression', $._expression), ';'),

    // Mid-block "control flow" expressions can appear without a trailing
    // `;`. Mirrors chumsky's `is_control_flow_expr` set: if/while/for/
    // match/loop/comptime-unroll/blocks. They are still parsed as
    // expressions; this rule simply marks the no-semi statement
    // position.
    control_flow_statement: ($) =>
      prec(
        2,
        choice(
          $.if_expression,
          $.while_expression,
          $.for_expression,
          $.match_expression,
          $.loop_expression,
          $.comptime_unroll_expression,
          $.bare_block,
        ),
      ),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.identifier_pattern,
        $.tuple_pattern,
        $.struct_pattern,
        $.integer_pattern,
        $.boolean_pattern,
        $.path_pattern,
        $.tuple_struct_pattern,
      ),

    identifier_pattern: ($) => seq(optional('mut'), $.identifier),
    _expression: ($) =>
      choice(
        $._literal_expression,
        $.identifier,
        $.self_literal,
        $.self_type_literal,
        $.primitive_type_value,
        $.paren_expression,
        $.tuple_expression,
        $.array_literal_expression,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.path_expression,
        $.struct_literal_expression,
        $.intrinsic_call_expression,
        $.import_expression,
        $.if_expression,
        $.match_expression,
        $.while_expression,
        $.for_expression,
        $.loop_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
        $.block_expression,
        $.comptime_expression,
        $.comptime_unroll_expression,
        $.checked_expression,
        $.anonymous_function_expression,
        $.anonymous_struct_expression,
        $.anonymous_enum_expression,
        $.anonymous_interface_expression,
      ),

    primitive_type_value: ($) => $.primitive_type,

    tuple_expression: ($) =>
      prec(
        2,
        seq(
          '(',
          $._expression,
          ',',
          sepByCommaWithTrailing($._expression),
          ')',
        ),
      ),

    array_literal_expression: ($) =>
      seq('[', sepByCommaWithTrailing($._expression), ']'),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          field(
            'operator',
            choice('-', '!', '~', seq('&', 'mut'), '&'),
          ),
          field('argument', $._expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice('*', '/', '%')],
        [PREC.additive, choice('+', '-')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.comparison, choice('==', '!=', '<', '>', '<=', '>=')],
        [PREC.bitwise_and, '&'],
        [PREC.bitwise_xor, '^'],
        [PREC.bitwise_or, '|'],
        [PREC.logical_and, '&&'],
        [PREC.logical_or, '||'],
      ];
      return choice(
        ...table.map(([precedence, op]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', op),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    // Postfix operations are all left-associative at the same precedence
    // level. They chain via the shared `_expression` left-hand side.
    // `method_call_expression` is given a higher precedence than the
    // would-be `field_expression + call_expression` two-step so that
    // `a.b(c)` parses as a single method call rather than as a field
    // access followed by an unrelated call (which is what an LR(1)
    // engine would otherwise prefer because of the order it sees the
    // tokens).
    call_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('function', $._expression),
          '(',
          field('arguments', sepByCommaWithTrailing($._call_arg)),
          ')',
        ),
      ),

    _call_arg: ($) => $._expression,

    method_call_expression: ($) =>
      prec.left(
        PREC.call + 1,
        seq(
          field('receiver', $._expression),
          '.',
          field('method', $.identifier),
          '(',
          field('arguments', sepByCommaWithTrailing($._call_arg)),
          ')',
        ),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('object', $._expression),
          '.',
          field('field', $.identifier),
        ),
      ),

    tuple_index_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('object', $._expression),
          '.',
          field('index', $.integer_literal),
        ),
      ),

    // The index expression is also where slice ranges live (ADR-0064).
    // `..`, `..hi`, `lo..`, `lo..hi` are accepted only inside `[ ... ]`;
    // the leading `&` / `&mut` is parsed as a unary prefix elsewhere.
    index_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('object', $._expression),
          '[',
          field('index', choice($._expression, $.range_expression)),
          ']',
        ),
      ),

    path_expression: ($) =>
      prec.right(
        PREC.path,
        seq(
          choice(
            $.identifier,
            $.self_type_literal,
            $.primitive_type,
            $.call_expression,
            $.field_expression,
          ),
          repeat1(seq('::', $.identifier)),
        ),
      ),

    // Struct literal paths use `::` (namespace) only here; `mod.Point { … }`
    // (dot-separated) is parsed as `(mod.Point) { … }` — i.e. the path
    // builds via `field_expression` and then the `{ … }` body is matched
    // by `struct_literal_expression` over an expression. Limiting this
    // rule to single-ident and `::` paths eliminates a conflict with
    // `field_expression`.
    struct_literal_path: ($) =>
      choice(
        $.identifier,
        $.self_type_literal,
        prec.right(PREC.path, seq($.identifier, repeat1(seq('::', $.identifier)))),
      ),

    struct_literal_expression: ($) =>
      prec(
        3,
        seq(
          field('path', $.struct_literal_path),
          '{',
          sepByCommaWithTrailing($.field_init),
          '}',
        ),
      ),

    field_init: ($) =>
      choice(
        seq(field('name', $.identifier), ':', field('value', $._expression)),
        field('name', $.identifier),
      ),

    intrinsic_call_expression: ($) =>
      seq(
        '@',
        field('name', $.identifier),
        '(',
        field('arguments', sepByCommaWithTrailing($._intrinsic_arg)),
        ')',
      ),

    // Intrinsic arguments are expressions, plus a handful of type forms
    // that have no expression counterpart (`[T; N]` and `!`).
